<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_account_bg"
    android:splitMotionEvents="false" >

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/nc_tob_bar"
        android:splitMotionEvents="false" >

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back_btn" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/save_btn" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_save"
            android:layout_toRightOf="@+id/btn_back"
            android:gravity="center"
            android:orientation="vertical" >

            <com.netcabs.customview.NetCabsTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Card Edit"
                android:textColor="@color/title"
                android:textSize="23sp"
                customview:fontName="HELSH__.TTF" />
        </LinearLayout>
    </RelativeLayout>

    <EditText
        android:id="@+id/ed_txt_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dip"
        android:background="@drawable/l_text_line"
        android:ems="10"
        android:enabled="false"
        android:gravity="right"
        android:hint="0000 0000 0000 0000"
        android:inputType="number"
        android:maxLength="19"
        android:paddingLeft="3dip"
        android:paddingRight="10dp"
        android:textColor="@color/warmgray11" />

    <ImageView
        android:id="@+id/img_view_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ed_txt_card_number"
        android:layout_alignLeft="@+id/ed_txt_card_number"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:background="@drawable/card_image" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ed_txt_card_number"
        android:layout_marginLeft="5dip"
        android:layout_toRightOf="@+id/img_view_card"
        android:src="@drawable/pointer" />

    <com.netcabs.customview.NetCabsTextView
        android:id="@+id/txt_view_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ed_txt_card_number"
        android:layout_below="@+id/ed_txt_card_number"
        android:layout_marginTop="20dp"
        android:text="@string/exp"
        android:textColor="@color/warmgray11"
        customview:fontName="HELSH__.TTF" />

    <TextView
        android:id="@+id/ed_txt_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_view_exp"
        android:layout_alignLeft="@+id/ed_txt_cvv"
        android:background="@drawable/s_text_line"
        android:gravity="center"
        android:hint="@string/exp_hints"
        android:inputType="number"
        android:paddingLeft="3dip"
        android:textColor="@color/warmgray11" >
    </TextView>

    <com.netcabs.customview.NetCabsTextView
        android:id="@+id/txt_view_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_view_exp"
        android:layout_below="@+id/txt_view_exp"
        android:layout_marginTop="20dp"
        android:text="@string/cvv"
        android:textColor="@color/warmgray11"
        customview:fontName="HELSH__.TTF" />

    <EditText
        android:id="@+id/ed_txt_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_view_cvv"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/txt_view_cvv"
        android:background="@drawable/s_text_line"
        android:gravity="center"
        android:hint="@string/cvv_hints"
        android:inputType="number"
        android:maxLength="3"
        android:paddingLeft="3dip"
        android:textColor="@color/warmgray11" >
    </EditText>

    <Spinner
        android:id="@+id/spinner_country"
        android:layout_width="0dip"
        android:layout_height="0dip" />

    <LinearLayout
        android:id="@+id/linear_layout_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_view_cvv"
        android:layout_below="@+id/ed_txt_cvv"
        android:layout_marginTop="@dimen/margin_top_left"
        android:background="@drawable/m_name_text_line"
        android:splitMotionEvents="false" >

        <ImageView
            android:id="@+id/img_view_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/flag_img" />

        <TextView
            android:id="@+id/txt_view_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:hint="@string/country"
            android:maxLength="20"
            android:paddingLeft="6dip"
            android:textColorHint="@color/warmgray11"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_view_country3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/linear_layout_country"
        android:layout_alignRight="@+id/linear_layout_country"
        android:background="@drawable/pointer_gray" />

    <EditText
        android:id="@+id/ed_txt_zip_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ed_txt_card_number"
        android:layout_below="@+id/ed_txt_cvv"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="@dimen/margin_top_left"
        android:layout_toRightOf="@+id/img_view_country3"
        android:background="@drawable/s_text_line"
        android:gravity="center"
        android:hint="@string/zip"
        android:inputType="number"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:textColor="@color/warmgray11"
        android:textColorHint="@color/water_mark" />

    <EditText
        android:id="@+id/ed_txt_card_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linear_layout_country"
        android:layout_alignRight="@+id/ed_txt_card_number"
        android:layout_below="@+id/linear_layout_country"
        android:layout_marginTop="@dimen/margin_top_left"
        android:background="@drawable/l_text_line"
        android:hint="@string/card_name"
        android:inputType="textCapSentences"
        android:paddingLeft="6dip"
        android:paddingRight="6dip"
        android:textColor="@color/warmgray11"
        android:textColorHint="@color/water_mark" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ed_txt_card_name"
        android:layout_alignRight="@+id/ed_txt_card_name"
        android:src="@drawable/pointer_gray" />

</RelativeLayout>