<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:customview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nc_bg"
    android:splitMotionEvents="false" >

    <ImageView
        android:id="@+id/img_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/nc_logo" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-10dip"
        android:src="@drawable/login_bg" />

    <Button
        android:id="@+id/btn_register_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/register_btn" />

    <com.netcabs.customview.NetCabsTextView
        android:id="@+id/txt_view_not_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_register_now"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dip"
        android:duplicateParentState="true"
        android:text="@string/not_account"
        android:textColor="@color/gray"
        customview:fontName="HELSH__.TTF" />

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_view_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:background="@drawable/login_with_fb" />

    <Button
        android:id="@+id/btn_google_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_facebook"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dip"
        android:background="@drawable/sign_with_google" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_view_not_account"
        android:layout_below="@+id/btn_google_plus"
        android:gravity="center"
        android:splitMotionEvents="false" >

        <EditText
            android:id="@+id/ed_txt_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_top_left"
            android:background="@drawable/login_text_line"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/water_mark" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/ed_txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/ed_txt_user_name"
            android:layout_below="@+id/ed_txt_user_name"
            android:layout_marginTop="@dimen/margin_top_left"
            android:background="@drawable/login_text_line"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:textColor="@color/edit_text_color"
            android:textColorHint="@color/water_mark" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/ed_txt_password"
            android:layout_below="@+id/ed_txt_password"
            android:layout_marginTop="@dimen/margin_top_left"
            android:background="@drawable/login_btn" />

        <Button
            android:id="@+id/btn_lost_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_login"
            android:layout_alignRight="@+id/ed_txt_password"
            android:background="@drawable/lost_pass_btn" />
    </RelativeLayout>

</RelativeLayout>